# PyRates_team

./: .gitignore  HW5.py  README.md  pyproject.toml  pyproject.toml.bak
NVoronova/: test_poetry.py
Platonov_Pavel/: test.py
Shvedov_Vitaliy/: test_simple.py
tests/: test_simple.py
