[tool.poetry]
name = "poetry-d"
version = "0.1.0"
description = ""
authors = ["Pavel Platonov <pavelplaton@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_d"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.4.3"
pytest = "^7.1.3"
webdriver-manager = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
